<resources>
    <string name="app_name">League of Therapy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hint_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="title_activity_login">Sign in</string>
    <string name="welcome1">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="signed_out">You have loged out</string>
    <string name="buttonLogin">Login</string>
    <string name="hint_password">Password</string>
    <string name="todo">TODO</string>
    <string name="text_singup"><u>No account! Go to Signup</u></string>
    <string name="welcome">Welcome to League of Therapy</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="sendBT">send</string>
    <string name="menu_chat">Chat Global</string>
    <string name="hint_message">Message</string>
</resources>
