<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lotv3.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_2"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_4"
                android:contentDescription="@string/todo"
                android:src="@drawable/banner_league_of_terapy" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL2"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_phone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL2"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/numberTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonLogin"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTIL2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:text="@string/buttonSignUp"
                />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>